# MVC

./: .gitattributes  .gitignore  CMakeLists.txt  Chopper.cpp  Chopper.h  Controller.cpp  Controller.h  Geometry.cpp  Geometry.h  Makefile  Model.cpp  Model.h  MyExceptions.h  README.md  README.txt  Sim_obj.cpp  Sim_obj.h  State_trooper.cpp  State_trooper.h  Truck.cpp  Truck.h  Vehicle.cpp  Vehicle.h  View.cpp  View.h  Warehouse.cpp  Warehouse.h  main.cpp
.github/workflows/: ci.yml
data/: route_north.txt  route_south.txt
tests/: CMakeLists.txt  test_geometry.cpp  test_model.cpp  test_vehicle.cpp  test_warehouse.cpp
